# ISSM

./: README.md  configure.ac
.github/build-ci/data/: standard.json
.github/build-ci/manifests/: gcc-ad.spack.yaml.j2  gcc-no-ad.spack.yaml.j2
.github/workflows/: ci.yml  common-workflow.yml  release.yml  ubuntu-python.yml
externalpackages/petsc/: install-3.22-gadi-gpu.sh  install-3.22-linux.sh
externalpackages/triangle/: install-linux.sh
m4/: issm_options.m4
src/: Makefile.am
src/c/: Makefile.am
src/c/main/: esmfbinders.cpp  issm_nuopc_capi.cpp  issm_nuopc_capi.h
src/c/shared/Exceptions/: exceptions.h
src/c/toolkits/petsc/objects/: PetscVec.cpp
src/c/toolkits/petsc/patches/: NewMat.cpp  VecToMPISerial.cpp
src/m/classes/: gpuoptions.py  toolkits.py
src/m/plot/: plot_gridded.py  plot_landsat.py
src/m/plot/colormaps/: cmaptools.py  demmap.py
src/nuopc_cap/: Makefile.am  README.md  issm_nuopc_cap.F90
